--- a/projetos/desafio-01/index.html
+++ b/projetos/desafio-01/index.html
@@ -22,14 +22,35 @@
         <section id="modulo">
             <h2>O QUE VOU APRENDER?</h2>
             <p>Temos 3 módulos recheados de conteúdos do básico ao avançado para que você aprenda a desenvolver sites profissionais utilizando somente HTML e CSS: sem nenhuma biblioteca ou framework a mais.</p>
-            <ul>
-                <li><span>Módulo 01:</span></li>
-                <li><span>Módulo 02:</span></li>
-                <li><span>Módulo 03</span></li>
-            </ul>
+            <div class="topic"><span>Módulo 01:</span> primeiros passos com CSS</div>
+            <div class="topic"><span>Módulo 02:</span> trabalhando com layouts no CSS</div>
+            <div class="topic"><span>Módulo 03:</span> refinando os estilos CSS das nossas páginas</div>
+        </section>
 
+        <section id="woman">
+            <h2>
+                transforme
+                o mundo
+                com a gente
+            </h2>
+        </section>
+
+        <section id="end">
+            <h2>EVOLUA E ENCARE NOVOS DESAFIOS
+PROFISSIONAIS
+            </h2>
+            <img src="assets/imagens/professional-challenges.png" alt="Desafios Profissionais">
+
+            <p>
+                Junte-se ao nosso ecossistema e transforme o mundo com a gente! Todos os dias dezenas de empresas acessam a nossa plataforma em busca dos talentos 
+                mais criativos, dinâmicos e colaborativos, além do conhecimento técnico. A nossa missão é te preparar para que você conecte-se com as melhores oportunidades.
+            </p>
         </section>
     </main>
+    <footer>
+        <img src="assets/imagens/dio-logo.png" alt="Logo DIO">
+        <p>Acesse <a href="">dio.me</a> e se cadastre agora</p>
+    </footer>
     
 </body>
 </html>
