--- a/projetos/desafio-01/index.html
+++ b/projetos/desafio-01/index.html
@@ -10,7 +10,7 @@
     <header>
         <div class="banner">
             <div id="logo">
-                <img src="assets/imagens/css-logo.png" alt="logo-trilha">
+                <img src="assets/imagens/css-logo.png" alt="logo-trilha" title="Logo Trilha CSS">
             </div>
             <h1>TRILHA DE CSS DA DIO</h1>
             <p>A nova Trilha de CSS da DIO está disponível. Acesse já e aprenda do zero como desenvoler sites profissionais</p>
@@ -49,7 +49,7 @@ PROFISSIONAIS
     </main>
     <footer>
         <img src="assets/imagens/dio-logo.png" alt="Logo DIO">
-        <p>Acesse <a href="">dio.me</a> e se cadastre agora</p>
+        <p>Acesse <a href="https://www.dio.me/">dio.me</a> e se cadastre agora</p>
     </footer>
     
 </body>
