--- a/estudos/flexbox/index.html
+++ b/estudos/flexbox/index.html
@@ -45,12 +45,62 @@
         #jst-cont-01{
             flex-flow: row wrap;
             width: 300px;
-            justify-content: end;
+            justify-content: center;
         }
         #jst-cont-02{
             flex-flow: column wrap;
             height: 300px;
+            justify-content: center;
+        }
+        .item-01{
+            width: 50px;
+            height: 50px;
+        }
+        .item-02{
+            width: 80px;
+            height: 80px;
+        }
+        .item-03{
+            width: 40px;
+            height: 40px;
+        }
+        #align-01{
+            height: 300px;
+            width: 300px;
+            margin: 20px;
+            flex-direction: row;
+            justify-content: space-evenly;
+            align-items: baseline;
+        }
+        #align-02{
+            height: 300px;
+            width: 300px;
+            margin: 20px;
+            flex-direction: column;
+            justify-content: space-evenly;
+            align-items: center;
+        }
+        #content-01{
+            width: 300px;
+            height: 250px;
+            flex-flow: row wrap;
+            align-items: flex-start;
             justify-content: space-around;
+        }
+        #content-02{
+            width: 300px;
+            height: 250px;
+            flex-flow: column wrap;
+            justify-content: space-around;
+            align-items: flex-start;
+        }
+        #order-01{
+            flex-flow: row wrap;
+            gap: 10px;
+        }
+        #order-02{
+            flex-flow: column wrap;
+            gap: 10px;
         }
     </style>
     <title>Conceito de Flexbox</title>
@@ -149,6 +199,58 @@
         <div class="item">Item 2</div>
         <div class="item">Item 3</div>
     </div>
-    
+    <h2>Align Items</h2>
+    <div class="container"  id="align-01">
+        <div class="item item-01">Item 1</div>
+        <div class="item item-02">Item 2</div>
+        <div class="item item-03">Item 3</div>
+    </div>
+    <div class="container" id="align-02">
+        <div class="item item-01">Item 1</div>
+        <div class="item item-02">Item 2</div>
+        <div class="item item-03">Item 3</div>
+    </div>
+    <h2>Align Content</h2>
+    <div class="container"  id="content-01">
+        <div class="item">Item 1</div>
+        <div class="item">Item 2</div>
+        <div class="item">Item 3</div>
+        <div class="item">Item 4</div>
+        <div class="item">Item 5</div>
+        <div class="item">Item 6</div>
+        <div class="item">Item 7</div>
+        <div class="item">Item 8</div>
+    </div>
+    <div class="container" id="content-02">
+        <div class="item">Item 1</div>
+        <div class="item">Item 2</div>
+        <div class="item">Item 3</div>
+        <div class="item">Item 4</div>
+        <div class="item">Item 5</div>
+        <div class="item">Item 6</div>
+        <div class="item">Item 7</div>
+        <div class="item">Item 8</div>
+    </div>
+    <h2>Order</h2>
+    <div class="container"  id="order-01">
+        <div class="item">Item 1</div>
+        <div class="item">Item 2</div>
+        <div class="item">Item 3</div>
+        <div class="item">Item 4</div>
+        <div class="item">Item 5</div>
+        <div class="item">Item 6</div>
+        <div class="item">Item 7</div>
+        <div class="item">Item 8</div>
+    </div>
+    <div class="container" id="order-02">
+        <div class="item">Item 1</div>
+        <div class="item">Item 2</div>
+        <div class="item">Item 3</div>
+        <div class="item">Item 4</div>
+        <div class="item">Item 5</div>
+        <div class="item">Item 6</div>
+        <div class="item">Item 7</div>
+        <div class="item">Item 8</div>
+    </div>
 </body>
 </html>
