--- a/projetos/desafio-02/index.html
+++ b/projetos/desafio-02/index.html
@@ -14,7 +14,7 @@
         </div>
         <div class="center">
             <div id="search">
-                <input type="text" id="textBusca" placeholder="Buscar...">
+                <input type="text" id="textBusca">
                 <img src="assets/imagens/search.png" id="btnBuscar" alt="Buscar">
             </div>
         </div>
@@ -149,6 +149,7 @@
                 </div>
             </div>
         </aside>
+
 
     </main>
     
