--- a/estudos/grid-layout/index.html
+++ b/estudos/grid-layout/index.html
@@ -14,6 +14,8 @@
         <div class="item item-04">Item 04</div>
         <div class="item item-05">Item 05</div>
         <div class="item item-06">Item 06</div>
+        <div class="item item-07">Item 07</div>
+
     </div>
     
 </body>
