Estudos - Grid Layout

--- a/estudos/grid-layout/index.html
+++ b/estudos/grid-layout/index.html
@@ -7,6 +7,7 @@
     <title>Grid Layout</title>
 </head>
 <body>
+    <h1>Grid Layout</h1>
     <div class="container">
         <div class="item item-01">Item 01</div>
         <div class="item item-02">Item 02</div>
@@ -16,6 +17,36 @@
         <div class="item item-06">Item 06</div>
         <div class="item item-07">Item 07</div>
 
+
+        <div class="item item-07">Item 07</div>
+        <div class="item item-07">Item 07</div>
+        <div class="item item-07">Item 07</div>
+    </div>
+
+    <h2>Min-Max</h2>
+    <div class="container exemplo-01">
+        <div class="item item-01">Item 01</div>
+        <div class="item item-02">Item 02</div>
+        <div class="item item-03">Item 03</div>
+        <div class="item item-04">Item 04</div>
+        <div class="item item-05">Item 05</div>
+        <div class="item item-06">Item 06</div>
+        <div class="item item-07">Item 07</div>
+    </div>
+
+    <h2>Posicionamento dos Grid</h2>
+    <div class="position">
+        <div id="item-a">.item-a</div>
+        <div id="item-b">.item-b</div>
+    </div>
+
+    <div class="position-ex-01">
+        <div id="item-ex01">1</div>
+        <div class="item-ex">2</div>
+        <div class="item-ex">3</div>
+        <div class="item-ex">4</div>
+        <div class="item-ex">5</div>
+        <div class="item-ex">6</div>
     </div>
     
 </body>
