--- a/estudos/grid-layout/index.html
+++ b/estudos/grid-layout/index.html
@@ -48,6 +48,14 @@
         <div class="item-ex">5</div>
         <div class="item-ex">6</div>
     </div>
+
+    <h2>Grid Area</h2>
+    <div class="grid-area">
+        <header>header</header>
+        <main>main</main>
+        <aside>sidebar</aside>
+        <footer>footer</footer>
+    </div>
     
 </body>
 </html>
